...

  if (!data) return null;

  return (
    <Animated.View style={[styles.root, containerAnimatedStyles]}>
      <TouchableNativeFeedback
        testID="MovieDetailsBackButton"
        onPress={() => {
          Navigation.pop('MAIN_STACK');
        }}>
        <Icon name="ios-arrow-back-outline" size={26} color="white" />
      </TouchableNativeFeedback>

...
